--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-locomotive-scroll": "^0.2.2",
+    "react-router-dom": "^6.28.0",
+    "react-scroll": "^1.9.0",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
