--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.2",
     "framer-motion": "^11.11.11",
     "locomotive-scroll": "^4.1.4",
     "lodash.debounce": "^4.0.8",
