--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.2",
     "framer-motion": "^11.11.11",
+    "lenis": "^1.1.16",
     "locomotive-scroll": "^4.1.4",
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
